--- a/Kenia.mw
+++ b/Kenia.mw
@@ -136,6 +136,61 @@ In den nåsleap van de [[Garissaslachting]] van [[1980]] begüngen in [[1984]] k
 
 By de verkesingen van 1988 wördden et ''mlolongo''-systeem invoord, wårby as stemmers sik in ne lyne achter öär favorite kandidåt musten upstellen, in steyde van med anonyme stembiljetten.<ref>[https://web.archive.org/web/20110215084715/http://www.highbeam.com/doc/1P2-1241691.html Harden, Blaine (25 February 1988). "Many Voters Stay Home as Kenya Drops Secret Ballot in Parliamentary Election". ''[[The Washington Post]]''.</ref> Vöär vöäle lüde was dit et deeptepünt van een slim undemokratisk regime. Et leidden töt wydverbreid protest vöär bywarking van de grundwet. In de jåren dårup güngen verskeidene klausules up de sküppe, so as denne wårin as mär eyne politike partye möäg.<ref>[https://web.archive.org/web/20100629014936/http://religiousfreedom.lib.virginia.edu/rihand/Kenya.html (archiveerd) Moreno, Pedro C. Handbook on Religious Liberty Around the World. 'Kenya'. The Rutherford Institute. Charlottesville, VA.]</ref>
 
+===Meyrdere partyen en ende van et tydpark-Moi===
+
+Nå 26 jår as eynpartyståt wör Kenia in [[1991]] nen meyrpartyenståt. Up den 28. oktober [[1992]] untbünd Moi et parlement, vyv månd vöärdat syne presidentstyd der up sat. Dårdöär begünnen de verkesingsvöärbereidingen vöär et parlement en de president. Up den 7. december 1992 must et geböären, mär et wör uutesteld tÖt 29 december. Nöäst de hearskende KANU-partye warren der nu ouk andere partyen, so as et [[Forum vöär Herstel van de Demokraty]] in Kenia en FORD Asili. De verkesingen wördden kenmarked döär groatsköälige intimidaty van teagenstanders en lastigvallen van verkesingsbeambten. Et resultåt was ne ekonomiske krisis, hülpen döär etnisk gewald dat uutbröäk ümdat de president wör verdacht van knoien med de verkesingsresultåten üm selv an de macht te blyven.<ref>Keith, Kyle. Politics of the independence of Kenya. 1999, Macmillan. ISBN 978-0333720080.</ref> Toch was disse verkesingsrunde een kantelpunt vöär Kenia, ümdat hyr et ende van Moi syn leiderskap en de oaverhearsking van de KANU begün. Anvanglik bleav Moi an de macht, med [[George Saitoti]] as underpresident. De KANU bleav an de macht med 100 seatels, mär verlöär der 88 an de ses andere partyen.
+
+{| class="wikitable"
+|'''Runde 1 (29 december 1992): uutslage'''
+|'''Telling'''
+|-
+|Antal registreerde keesgerechtigden
+|7,900,366
+|-
+|Stemmers
+|5,486,768 (69.4%)
+|-
+|Blanco of verkeyrd invülde stembiljetten
+|61,173
+|-
+|Good invüld
+|5,425,595
+|}
+{| class="wikitable"
+|'''Runde 1: Seatelverdeyling'''
+| colspan="3" |
+|-
+|'''Politike gruup'''
+|'''Totaal'''
+|-
+|Kenya African National Union (KANU)
+|100
+|-
+|Forum for the Restoration of Democracy (FORD-Kenya)
+|31
+|-
+|Forum for the Restoration of Democracy (FORD-Asili)
+|31
+|-
+|Democratic Party (DP)
+|23
+|-
+|Kenya Social Congress (KSC)
+|1
+|-
+|Kenya National Congress (KNC)
+|1
+|-
+|Party of independent Candidates of Kenya (PICK)
+|1
+|}
+
+In de nåsleap van de partyverkesingen van 1992 köämen 5000 lüde ümme en noch es 75.000 rakeden untheymd.<ref>[http://www.irinnews.org/report/73319/kenya-clashes-elections-and-land-church-keeps-watch-molo Irinnews.org. "Clashes, elections and land - church keeps watch in Molo".| Skreaven up 19 juli 2007.] Bekeaken up 29 januåry 2019.</ref> In de dårupvolgende vyv jåren wördden vöäle polityke verbunden esmeadet in de anloup når de nye verkesingen. In [[1994]] köäm Jaramogi Oginga Odinga uut de tyd en verskeidene koalitys slöäten sik an by syne FORD Kenya-partye. De nye partye nöömden sik de National Democratic Alliance (Nationaal Demokratisk Verbund). Lüde in disse partye kunden et nit eyns worden. Dårup vörmden [[Richard Leakey]] in [[1995]] de Safina-partye, mär den wör uut de verkesingen eweyrd töt 1997.<ref>https://www.bbc.com/news/world-africa-13682176 BBC.com. Kenya profile. Skreaven up 31 januåry 2018.] Bekeaken up 29 januåry 2019.</ref>
+
+In 1996 veranderden KANU de grundwet wårdöär Moi noch ne ekstra tyd president möcht weasen. Moi löät sik herkesen en wün ne 5e termine in [[1997]].<ref>[https://crawfurd.dk/africa/kenya_timeline.htm|title=Kenya crawfurd.dk. "History Timeline - historic overview of Kenya, Africa".] Bekeaken up 29 januåry 2019.</ref> Synen winst wör stark bekritiseerd döär syne gröätste teagenstanders [[Mwai Kibaki|Kibaki]] en [[Raila Odinga|Odinga]].<ref>Anderson, David M. (2003). "Kenya's Elections 2002 – The Dawning of a New Era". African Affairs, vol 102, is 407. p 331–342.</ref> Nå synen winst kun Moi grundwettelik nit meyr meddoon an de verkesingen. Vanaf et begin van [[1998]] probeerden Moi de volgende verkesingen te stüren, so dat [[Uhuru Kenyatta]] in [[2002]] president sul worden.<ref>[http://www.africanews.com/2017/10/25/a-look-at-kenya-s-elections-history-since-independence-in-1964/ Africanews.com. "A look at Kenya's elections history since independence in 1964." Skreaven up 25 november 2017.] Bekeaken up 29 januåri 2019.</ref>
+
+
+
 [[Kategorie: Tweants artikel]]
 [[Kategorie: Afrika]]
 
