*Empty MediaWiki Message*

--- a/Kenia.mw
+++ b/Kenia.mw
@@ -198,6 +198,20 @@ In 2005 verwörpen de Kenianen een plan üm de unafhanglikheidsgrundwet van 1963
 
 In juli van 2010 güng Kenia samenwarken med andere oust-afrikaanske landen üm de nye Oust-Afrikaanske Deylmarkt te vörmen.<ref>[https://af.reuters.com/article/kenyaNews/idAFLDE65T2AJ20100701 Reuters.com. "FACTBOX-East African common market begins". Skreaven up 1 juli 2010.] Bekeaken up 29 januåry 2019.</ref> In augustus van 2010 höld Kenia een referendum wårup ne nye [[Grundwet van Kenia|keniaanske grundwet]] uutskreaven wör. Macht van de president wör an banden legd en de centrale regeyring upheaven.
 
+===upheaving van de regeyring en verdeyling van de macht===
+
+Nå anname van de nye grundwet wör Kenia ne presidentiele representative demokraty, wårby as de president van Kenia beide ståtshöyvd, regeyringsleider is. Ouk wör der ne meyrpartyenstelsel insteld. In de grundwet steyt under meyr dat de uutvorende macht by et uutvorende deyl van de regeyring ligt under anvoring van de president den as ouk kabinetsvöärsitter is. Et kabinet besteyt uut lüde van buten et parlement. Wettelike macht ligt uutslutend by et [[Keniaanske Parlement]]. Et rechterlike apparaat is unafhanglik van de beide instantys.
+
+In 2011 stüürden Kenia trupen når Somalie üm te vechten teagen [[islam]]itiske terröörgruup [[Al-Shabaab]]. 
+
+[[File:Secretary Kerry Jokes About His Height Standing With Kenyan President Uhuru Kenyatta at the State House in Nairobi (28534132883).jpg|thumb|Keniaanske president [[Uhuru Kenyatta]] med den amerikaansken ståtssekretåris [[John Kerry]] up [[22 augustus]] 2016]]
+Do as halverweage [[2011]] vöär et tweyde jår te weinig reygen völ, kreag Kenia te maken med de slimste dröygte en dårupvolgenden hunger in 60 jår. Vöäral de noordwestelike [[gråfskap Turkana]] wör slim tröffen.<ref>[http://www.kbc.co.ke/news.asp?nid=71528 |archiveurl=https://web.archive.org/web/20120104173650/http://www.kbc.co.ke/news.asp?nid=71528  Kbc.co.ke. (Archiveerd). "Red Cross Warns of Catastrophy in Turkana". Koech, Dennis. Skreaven up 4 januåry 2012.] Bekeaken up 7 August 2011.</ref> Lokale skolen wördden der selvs ümme slöäten.<ref>[http://www.indcatholicnews.com/news.php?viewStory=18686 Indcatholicnews.com. "Kenya: schools close as famine takes hold in Turkana." Skreaven up 28 july 2011.] Bekeaken up 7 augustus 2011.</ref> Begin 2012 wör den krisis oaverwünnen döär erichte noudhülpe. hülpbedryve deaden öäre hülpe verleggen når weaderupbow, döär under meyr irrigatykanalen te graeven en söäde uut te deylen.<ref>[https://www.nytimes.com/2012/02/04/world/africa/un-says-famine-in-somalia-is-over-but-risks-remain.html  Gettleman, Jeffrey (3 februåry 2012) "U.N. Says Famine in Somalia Is Over, but Risks Remain]. ''The New York Times''.</ref>
+
+In 2013 had Kenia syn eyrste algemeyne verkesingen nå den nyen grundwet. Uhuru Kenyatta wün in een slim betwiste uutslag, wårup den teagenstander, Raila Odinga, ne petity uutskreav. Den keniaansken Hougen Råd höld  vaste an de oorsprunglike verkesingsuutslage en Kenyatta wör president, med [[William Ruto]] as underpresident. 
+
+In [[2017]] wün Uhuru Kenyatta syn tweyde ambstyd. Weaderümme wör den uutslag betwyfeld döär Odinga, den as der med når et Hougere Rechtshov güng. Hee klaagden de verkesingskommissy an vöär misbestüür van de verkesingen, en Kenyatta vöär sjummelen. Et Hougere Rechtshov güng der in med en verklården de uutslagen ungeldig.<ref>[https://www.theguardian.com/world/2017/oct/25/kenya-presidential-election-rerun-to-go-ahead-supreme-court The Guardian. Burke, Jason. "Kenya election rerun to go ahead after court fails to rule on delay". Skreaven up 25 oktober 2017.] bekeaken up 29 januåry 2019.</ref> Med disse beslissing gavven et Hougere Rechtshov an dat se öäre unafhanglikheid seriöös nöämen.<ref>[https://www.idlo.int/kenya-court-decision-demonstrates-respect-rule-of-law idlo.int. "Kenya court decision demonstrates respect for rule of law".] Bekeaken up  29 januåry 2019.</ref> Dårnå höld Kenia ne tweyde verkesingsrunde, wår as Uhuru Kenyatta toch wün, ümdat Raila nit med wul doon vanweage unregelmåtigheden.<ref>[https://www.standardmedia.co.ke/article/2001258851/uhuru-kenyatta-wins-repeat-election-with-7-4-million-votes Standardmedia.co.ke. "President Uhuru Kenyatta declared winner of repeat presidential election".] Bekeaken up 29 januåry 2019</ref><ref>[https://www.nytimes.com/2017/10/30/world/africa/kenya-election-kenyatta-odinga.html. New York Times. "President Uhuru Kenyatta declared winner of repeat presidential election".] Bekeaken up 29 januåry 2019.</ref>
+
+
 [[Kategorie: Tweants artikel]]
 [[Kategorie: Afrika]]
 
