--- a/Raai.mw
+++ b/Raai.mw
@@ -1,5 +1,6 @@
 [[Bestaand:Rogge aar Secale cereale.jpg|right|250px|thumb|Raaikoren]]
 [[Bestaand:Secale cereale flour.jpg|250px|thumb|Door [[korenmolen]] gemalen rogge]]
+[[File:Secale cereale MHNT.BOT.2015.2.40.jpg|thumb|''Secale cereale'']]
 
 '''Raai''', '''rogge''' of '''rôg''' ([[Latien|Latain]]: ''Secale cereale''; [[Oostfrais]]''Rog'' (roag), ''Rei'' (raai)) is [[kruusbestoeven|kruusbevruchtende]] [[koren]]. t Heurt, liek as de andere groansoorten bie de [[grezenfemilie|grasfemilie]].
 
