*Empty MediaWiki Message*

--- a/Hoornerveane.mw
+++ b/Hoornerveane.mw
@@ -1,4 +1,4 @@
-'''Hoornervaene''' ([[Nederlaans|Nederlands]]: ''Hoornerveen'') is n [[buurtschap]] in de gemeente [[Heerde]], in de [[Nederlaand|Nederlandse]] [[pervincie|provinsie]] [[Gelderlaand|Gelderland]]. t Ligt ten noorden van de plaatse Heerde.
+'''Hoornerveane''' ([[Nederlaans|Nederlands]]: ''Hoornerveen'') is een [[buurtschap]] in de gemeente [[Heerde]], in de [[Nederlaand|Nederlandse]] [[pervincie|provincie]] [[Gelderlaand|Gelderland]]. Et ligt ten noorden van de plaatse Heerde.
 
 {{Heerde}}
 {{Dialekt|ovel|Heerde|Algemene Nedersaksiese Schriefwieze}}
