--- a/Daeventer.mw
+++ b/Daeventer.mw
@@ -1,18 +1,18 @@
-[[Ofbeelding:Deventer_kerk.jpg|thumb|De [[Grote of Lebuïnuskarke|Grote of Lebuïnuskerke]] van Daeventer]]
-[[Ofbeelding:Deventer zonsondergang k.JPG|thumb|Uutzichte op de Lebuïnuskerke van Daeventer]]
-[[Ofbeelding:Blaeu 1652 - Deventer.jpg|thumb|t Straotenpatroon van Daeventer op disse kaorte uut 1652 is vandage de dag nog altied t zelfde]]
+[[Ofbeelding:Deventer_kerk.jpg|thumb|De [[Grote of Lebuïnuskarke|Grote of Lebuïnuskerke]] van Deaventer]]
+[[Ofbeelding:Deventer zonsondergang k.JPG|thumb|Uutzichte op de Lebuïnuskerke van Deaventer]]
+[[Ofbeelding:Blaeu 1652 - Deventer.jpg|thumb|t Straotenpatroon van Deaventer op disse kaorte uut 1652 is vandage de dag nog altied t zelfde]]
 [[Ofbeelding:Deventer Proosdij.jpg|thumb|De Proosdij uut 1130 is t oldste stenen waonhuus van Nederland]]
-'''Daeventer''' ([[Nederlaands|Nederlands]]: ''Deventer'') is n [[Stad (woonstee)|stad]] en gemeente en olde [[Hanzestad]] in t oosten van [[Nederlaand|Nederland]], in t zuudwesten van de provinsie [[Oaveriessel|Aoveriessel]]. De stad is ebouwd an de rivier de [[Iessel]]. De gemeente Daeventer grenst in t noordwesten an de gemeente [[Olst-Wieje]], in t noordoosten an [[Raolte]], in t oosten an [[Riesn-Hooltn|Riessen-Holten]], in t zuden an [[Lochem]] (Gelderland) en, escheiden deur de [[Iessel]], in t westen an [[Voorst (gemeente)|Voorst]] (Gelderland). In t zuden van de gemeente mondt de [[Schipbeek]] in de [[Iessel]]. Op 1 januari 2019 had de gemeente 99.941 inwoners.
+'''Deaventer''' ([[Nederlaands|Nederlands]]: ''Deventer'') is n [[Stad (woonstee)|stad]] en gemeente en olde [[Hanzestad]] in t oosten van [[Nederlaand|Nederland]], in t zuudwesten van de provinsie [[Oaveriessel|Aoveriessel]]. De stad is ebouwd an de rivier de [[Iessel]]. De gemeente Deaventer grenst in t noordwesten an de gemeente [[Olst-Wieje]], in t noordoosten an [[Raolte]], in t oosten an [[Riesn-Hooltn|Riessen-Holten]], in t zuden an [[Lochem]] (Gelderland) en, escheiden deur de [[Iessel]], in t westen an [[Voorst (gemeente)|Voorst]] (Gelderland). In t zuden van de gemeente mondt de [[Schipbeek]] in de [[Iessel]]. Op 1 januari 2019 had de gemeente 99.941 inwoners.
 
-Daeventer is één van de vuuf oldste steden van [[Nederland]] en hef n lange [[geschiedenis]]. Daeventer steet al in de [[9e eeuw]]se bronnen van t [[Sticht Utrecht|bisdom Utrecht]] vermeld. In n [[oorkonde]] uut [[877]] wordt espreuken aover zeuven [[boerderieje|hoeven]] in ''Daventre portu'' <ref name="Otten">[http://books.google.com/books?id=4I6QdCxxnk0C&pg=PA55&dq=deventer+etymologie&as_brr=3&hl=nl&sig=ACfU3U1ucCrHmlKV_oOsnC67D9LNW4Qcog#PPA53,M1 D. Otten (2006)], ''Lebuïnus, een gedreven missionaris'', blz 53-57, Uitgeverij Verloren, ISBN 9065509143</ref> (de haven Daeventer). In [[952]] wordt Daeventer in n schenkingsoorkonde van [[Otto I de Grote|keuning Otto I]] as stad vermeld.<ref>Vermelding van Daeventer as stad (''urbs'') in n schenkingsoorkonde van keuning Otto I an t Mauritiusklooster in Maagdenburg, [http://www.mgh.de/dmgh/resolving/MGH_DD_K_I_/_DD_H_I_/_DD_O_I_S._241 Internetversie]. Daeventer werd al erg vrog n ''civitas'' eneumd, zie meer in: A.C.F. Koch (1992), [http://books.google.nl/books?id=v7giuKkzN2EC&pg=PA37 ''Die Anfänge der Stadt Deventer''] in: ''Tussen Vlaanderen en Saksen: uit de verspreide geschiedkundige geschriften van A.C.F. Koch (1923-1990)'', Hilversum, blz. 37.</ref> Naodat Daeventer in de loop der jören steeds meer rechten en vrieheden kreeg, kreeg t in [[1123]] van [[Hendrik V (keizer)|keizer Hendrik V]] de beschikking aover de gemeentelike gronden. Dit wordt deur historisi ezeen as t moment van t verkriegen van [[stadsrechten]] deur de inwaoners.<ref>M. Bartels en H. Slechte (2007), [http://www.historischcentrumoverijssel.nl/NR/rdonlyres/E587DDEB-5788-4FF6-AFA3-8C2B9C52C56F/0/06.pdf ''Deventer, missiepost en handelsnederzetting aan de IJssel''], blz. 40, in: Overijsselse Historische Berichten 122, blz. 33-50</ref> De stad hef t oldste stenen huus, t oldste wandelpark en de oldste wetenschappelike biebeltheek (Stadsarchief en Athenaeumbibliotheek) van Nederland.
+Deaventer is één van de vuuf oldste steden van [[Nederland]] en hef n lange [[geschiedenis]]. Deaventer steet al in de [[9e eeuw]]se bronnen van t [[Sticht Utrecht|bisdom Utrecht]] vermeld. In n [[oorkonde]] uut [[877]] wordt espreuken aover zeuven [[boerderieje|hoeven]] in ''Daventre portu'' <ref name="Otten">[http://books.google.com/books?id=4I6QdCxxnk0C&pg=PA55&dq=deventer+etymologie&as_brr=3&hl=nl&sig=ACfU3U1ucCrHmlKV_oOsnC67D9LNW4Qcog#PPA53,M1 D. Otten (2006)], ''Lebuïnus, een gedreven missionaris'', blz 53-57, Uitgeverij Verloren, ISBN 9065509143</ref> (de haven Deaventer). In [[952]] wordt Deaventer in n schenkingsoorkonde van [[Otto I de Grote|keuning Otto I]] as stad vermeld.<ref>Vermelding van Deaventer as stad (''urbs'') in n schenkingsoorkonde van keuning Otto I an t Mauritiusklooster in Maagdenburg, [http://www.mgh.de/dmgh/resolving/MGH_DD_K_I_/_DD_H_I_/_DD_O_I_S._241 Internetversie]. Deaventer werd al erg vrog n ''civitas'' eneumd, zie meer in: A.C.F. Koch (1992), [http://books.google.nl/books?id=v7giuKkzN2EC&pg=PA37 ''Die Anfänge der Stadt Deventer''] in: ''Tussen Vlaanderen en Saksen: uit de verspreide geschiedkundige geschriften van A.C.F. Koch (1923-1990)'', Hilversum, blz. 37.</ref> Naodat Deaventer in de loop der jören steeds meer rechten en vrieheden kreeg, kreeg t in [[1123]] van [[Hendrik V (keizer)|keizer Hendrik V]] de beschikking aover de gemeentelike gronden. Dit wordt deur historisi ezeen as t moment van t verkriegen van [[stadsrechten]] deur de inwaoners.<ref>M. Bartels en H. Slechte (2007), [http://www.historischcentrumoverijssel.nl/NR/rdonlyres/E587DDEB-5788-4FF6-AFA3-8C2B9C52C56F/0/06.pdf ''Deventer, missiepost en handelsnederzetting aan de IJssel''], blz. 40, in: Overijsselse Historische Berichten 122, blz. 33-50</ref> De stad hef t oldste stenen huus, t oldste wandelpark en de oldste wetenschappelike biebeltheek (Stadsarchief en Athenaeumbibliotheek) van Nederland.
 
 == Naam ==
-De name Daeventer wordt [[etymologie|etymologies]] toe-eschreven<ref name="Otten"/> an n in de [[8e eeuw]] of eerder ontstaone samenstelling van twee [[Oldsaksisch|Oldsaksiese]] vormen. De name zol dan ontstaon waezen uut ''*deve-treo'', dat betekent zo'n beetjen "an n waterloop elegen geboomte". Döörnaost wordt wel es ezegd dat Daeventer zien name dankt an t stadjen [[Daventry]] in [[Engeland]], wöör de kristelike missionaris [[Lebuïnus]] (Liafwin) vandaon zol kommen, of nöör n met hum mee-ereisde bevriende [[monnik]] met de name Davo<ref name="Otten"/>; dit leste lik onmeugelik.<ref>Dirk Otten, ''Lebuïnus, een gedreven missionaris'', blz. 55. Hilversum: Uitgeverij Verloren, 2006</ref>
+De name Deaventer wordt [[etymologie|etymologies]] toe-eschreven<ref name="Otten"/> an n in de [[8e eeuw]] of eerder ontstaone samenstelling van twee [[Oldsaksisch|Oldsaksiese]] vormen. De name zol dan ontstaon waezen uut ''*deve-treo'', dat betekent zo'n beetjen "an n waterloop elegen geboomte". Döörnaost wordt wel es ezegd dat Deaventer zien name dankt an t stadjen [[Daventry]] in [[Engeland]], wöör de kristelike missionaris [[Lebuïnus]] (Liafwin) vandaon zol kommen, of nöör n met hum mee-ereisde bevriende [[monnik]] met de name Davo<ref name="Otten"/>; dit leste lik onmeugelik.<ref>Dirk Otten, ''Lebuïnus, een gedreven missionaris'', blz. 55. Hilversum: Uitgeverij Verloren, 2006</ref>
 
-Vanwege de politiek overwegend linkse bevolking werd Daeventer vrogger ok wel t ''Moskou an de Iessel'' eneumd. Ok wordt t wel de ''Koekstad'' eneumd, vanwege de bekende [[Daeventer koek]].
+Vanwege de politiek overwegend linkse bevolking werd Deaventer vrogger ok wel t ''Moskou an de Iessel'' eneumd. Ok wordt t wel de ''Koekstad'' eneumd, vanwege de bekende [[Deaventer koek]].
 
 ==Dörpen en buurtschappen==
-Daeventer besteet uut de volgende dörpen: 
+Deaventer besteet uut de volgende dörpen: 
 *[[Battem]] 
 *[[Colmschate]] 
 *[[Diepenvene]] 
@@ -25,8 +25,8 @@ En de volgende buurtschappen:
 *[[De Bannink]] 
 *[[Dortherhoek]] 
 *[[Averlo en Frieswiek]]
-*[[Linde (Daeventer)|Linde]] 
-*[[Loo (Daeventer)|Loo]] 
+*[[Linde (Deaventer)|Linde]] 
+*[[Loo (Deaventer)|Loo]] 
 *[[Meulebelt]] 
 *[[Olde Meule]] 
 *[[Oxe]] 
@@ -37,23 +37,12 @@ En de volgende buurtschappen:
 *[[Zuudloo]]
 
 ==Schrievers==
-De verhaleschriever [[Herman Korteling]] was veurzitter van de in 1956 op-erichte [[Sallandse Schrieverskring]]. Hee was een van de stuwende krachten achter t tiedschrift veur streektaalschrieverieje ''[[De Moespot]]'' en publiseerden in ''[['t Swieniegeltje]]''. [[Gerrit Kuijk]] (1927) is n Daeventer schriever van kinderboeken, schoelmethodes, grammatika van t Daeventers, memoires en [[nöalstukken|kollums]] in t [[Deventer Dagblad]]. Veul van zien werk, wööronder de kollums, is in t Daeventers eschreven.
-
-==[[Nedersaksies]]==
-*'''Algemeen:''' 
-**''Daeventer'' (ok espeld as ''Dèventer'')
-**''Deventer'' (uutspraak: {{IPA|/dɪːmtər/}})
-*[[Achterhooks]]: ''Daeventer''
-*[[Grunnegs]]: ''Deventer'' (oetsproak: {{IPA|/deːimtər/}})
-*[[Tweants]]: 
-**''Daeventer'' (ok espeld as: ''Deavnter'')
-**''Daewenter'' (ok espeld as: ''Deawnter''; [[Eanter|Eanters]] en [[Riesns]])
-*[[Sallaands]]: ''Dèmter'' (eschreven as ''Dèventer'')
+De verhaleschriever [[Herman Korteling]] was veurzitter van de in 1956 op-erichte [[Sallandse Schrieverskring]]. Hee was een van de stuwende krachten achter t tiedschrift veur streektaalschrieverieje ''[[De Moespot]]'' en publiseerden in ''[['t Swieniegeltje]]''. [[Gerrit Kuijk]] (1927) is n Deaventer schriever van kinderboeken, schoelmethodes, grammatika van t Deaventers, memoires en [[nöalstukken|kollums]] in t [[Deventer Dagblad]]. Veul van zien werk, wööronder de kollums, is in t Deaventers eschreven.
 
 ==Referensies==
 <references/>
 
-[[Ofbeelding:Deventer brink.JPG|thumb|800px|center|De Brink in de binnenstad van Daeventer. Op de veurgrond de Wilhelminafontein, links de Waag, midden achter De Penninckshoek.]]
+[[Ofbeelding:Deventer brink.JPG|thumb|800px|center|De Brink in de binnenstad van Deaventer. Op de veurgrond de Wilhelminafontein, links de Waag, midden achter De Penninckshoek.]]
 
 {{Commonscat|Deventer}}
 {{Oaveriessel}}
