*Empty MediaWiki Message*

--- a/Lyste_van_landen_van_de_wearld.mw
+++ b/Lyste_van_landen_van_de_wearld.mw
@@ -599,8 +599,8 @@ Hyrunder volgt een '''lyste van landen van de wearld'''.
 |[[Lilongwe (stad)|Lilongwe]]
 |[[Engels]]k: Malawi <br /> [[Nyanja (taal)|Nyanja]]: Malaŵi
 |-
-|[[Malediven]]
-|Republik van de Malediven
+|[[Maldiven]]
+|Republik van de Maldiven
 |[[Malé]]
 |[[Divehi]]: Dhivehi Rajjge / ގުޖޭއްރާ ޔާއްރިހޫމްޖު
 |-
@@ -712,9 +712,9 @@ Hyrunder volgt een '''lyste van landen van de wearld'''.
 |[[Managua (stad)|Managua]]
 |[[Spaans]]k: Nicaragua
 |-
-|[[Ni'j-Zeelaand|Nyseyland]]<ref name=B />
-|Nyseyland
-|[[Wellington (Nyseyland)|Wellington]]
+|[[Ni'j-Zeelaand|Ny-Seyland]]<ref name=B />
+|Ny-Seyland
+|[[Wellington (Ny-Seyland)|Wellington]]
 |[[Engels]]k: New Zealand <br /> [[Maori]]: Aotearoa
 |-
 |[[Niger (laand)|Niger]]
@@ -756,8 +756,8 @@ Hyrunder volgt een '''lyste van landen van de wearld'''.
 |[[Maskat]]
 |[[Arabies|Arabisk]]: ʿUmān / عُمان
 |-
-|[[Oostnriek|Ousterryk]]
-|Republik Ousterryk
+|[[Oostnriek|Oustenryk]] / Ousterryk
+|Republik Oustenryk/Ousterryk
 |[[Wenen]]
 |[[Duuts|Düütsk]]: Österreich
 |-
@@ -794,8 +794,8 @@ Hyrunder volgt een '''lyste van landen van de wearld'''.
 |[[Panama-Stad]]
 |[[Spaans]]k: Panamá
 |-
-|[[Papua-Nyginea]]
-|Unafhankelike Ståt Papua-Nyginea
+|[[Papua-Ny-Ginea]]
+|Unafhankelike Ståt Papua-Ny-Ginea
 |[[Port Moresby]]
 |[[Engels]]k: Papua New Guinea <br /> [[Hiri Motu]]: Papu Niu Gini <br /> [[Tok Pisin]]: Papua Niugini
 |-
@@ -1110,8 +1110,8 @@ Hyrunder volgt een '''lyste van landen van de wearld'''.
 |[[Londen]]
 |[[Engels]]k: United Kingdom
 |-
-|[[Vereynigde Arabiske Emiråten]]
-|Vereynigde Arabiske Emiråten (VAE)
+|[[Vereynigde Arabiske Emiraten]]
+|Vereynigde Arabiske Emiraten (VAE)
 |[[Abu Dhabi (stad)|Abu Dhabi]]
 |[[Arabies|Arabisk]]: Al-ʾImārāt al-ʿArabiyya al-Muttaḥida / ‏الإمارات العربيّة المتّحدة
 |-
@@ -1258,7 +1258,7 @@ In de lyste hyrunder stayt een oaversicht van landen dee een rume internationale
 |}
 
 == Neet-unafhankelike gebeden ==
-Dit is een lyste van [[ofhankelike gebeden]]. Ofhankelike gebeden binnen gebeden dee geyn integraal underdeyl binnen van een land, mär selv ouk neet unafhankelik binnen. Allinnig de Vereynigde Ståten, et Vereynigd Koaningryk, Noorweagen en Nyseyland hebben gebeden ekreëerd dee an disse definity vuldoon. Dårnåst binnen der noch een antal gebeden dee officieel geyn ofhankelike gebeden binnen, mär vanweage höär bysündere ståtus toch vake so eseen wörden. Ouk disse gebeden binnen in de lyste up-enöämen. Een antal landen (Argentinie, Australie, Chili, Frankryk, Nyseyland, Noorweagen en et Vereynigd Koaningryk) hebben een deyl van [[Antarktika]] upeist. Up båsis van et [[Antarktisk Verdrag]] wörden disse anspraken internationaal neet erkend en dårümme binnen disse anspraken ouk neet in de lyste up-enöämen.
+Dit is een lyste van [[ofhankelike gebeden]]. Ofhankelike gebeden binnen gebeden dee geyn integraal underdeyl binnen van een land, mär selv ouk neet unafhankelik binnen. Allinnig de Vereynigde Ståten, et Vereynigd Koaningryk, Noorweagen en Ny-Seyland hebben gebeden ekreëerd dee an disse definity vuldoon. Dårnåst binnen der noch een antal gebeden dee officieel geyn ofhankelike gebeden binnen, mär vanweage höär bysündere ståtus toch vake so eseen wörden. Ouk disse gebeden binnen in de lyste up-enöämen. Een antal landen (Argentinie, Australie, Chili, Frankryk, Ny-Seyland, Noorweagen en et Vereynigd Koaningryk) hebben een deyl van [[Antarktika]] upeist. Up båsis van et [[Antarktisk Verdrag]] wörden disse anspraken internationaal neet erkend en dårümme binnen disse anspraken ouk neet in de lyste up-enöämen.
 
 === Amerikaanske neet-unafhankelike gebeden ===
 De [[Amerikaanske Maagdeneilanden]], [[Guam]], de [[Noordelike Marianen]] en [[Puerto Rico]] binnen ''georganiseerde neet-ingelyvde territoria'', wat seagen wil dat et ofhankelike gebeden binnen van de Vereynigde Ståten mid een bepålde form van selvbestüür. Dårnåst binnen der noch een antal ''ungeorganiseerde neet-ingelyvde territoria'': [[Baker (eiland)|Baker]], [[Howland (eiland)|Howland]], [[Jarvis (eiland)|Jarvis]], [[Johnston (atol)|Johnston]], [[Kingman (rif)|Kingman]], [[Midway (eiland)|Midway]], [[Navassa]] en [[Wake (eiland)|Wake]]. Disse groutendeyls unbewoande eilandgebeden binnen ouk ofhankelike gebeden van de VS, mär kennen geyn form van selvbestüür. Vöär ståtistiske dooleinden wörden se döär [[ISO 3166-1]] egruppeerd under de name [[Kleine ofgelegen eilanden van de Vereynigde Ståten]]. Ouk [[Palmyra (atol)|Palmyra]], dat een ''ungeorganiseerd ingelyvd territorium'' is en düs wel een integraal underdeyl is van de Vereynigde Ståten, wördt hyrto erekend. De [[CIA]] gruppeert de unbewoande eilanden (behalve Navassa en Wake) in et World Factbook under de name [[United States Pacific Island Wildlife Refuges]].<ref name="cia.gov">https://www.cia.gov/library/publications/the-world-factbook/</ref> [[Bajo Nuevo]] en [[Serranilla]] wörden döär de Vereynigde Ståten ouk upeist as ''ungeorganiseerde neet-ingelyvde territoria'', mär wörden momenteel bestüürd döär [[Colombia]]. [[Amerikaansk-Samoa]] is officieel ouk een ''ungeorganiseerd neet-ingelyvd territorium'', mär hevt wel een bepålde form van selvbestüür.
@@ -1640,8 +1640,8 @@ Et [[Keuninkriek der Nederlaanden|Koaningryk van de Neaderlanden]] besteyt uut v
 |[[Engels]]k en [[Nederlaans|neaderlandsk]]: Sint Maarten
 |}
 
-=== Nyseylandske neet-unafhankelike gebeden ===
-De [[Cookeilanden]] en [[Niue]] binnen selvbestürende gebeden in vrye associaty mid Nyseyland en wörden soms as unafhankelike landen eseen. [[Tokelau]] en [[Ross Dependency]] binnen beide ofhankelike gebeden van Nyseyland, mär de (antarktiske) ansprake up Ross Dependency wördt internationaal neet erkend.
+=== Ny-Seylandske neet-unafhankelike gebeden ===
+De [[Cookeilanden]] en [[Niue]] binnen selvbestürende gebeden in vrye associaty mid Ny-Seyland en wörden soms as unafhankelike landen eseen. [[Tokelau]] en [[Ross Dependency]] binnen beide ofhankelike gebeden van Ny-Seyland, mär de (antarktiske) ansprake up Ross Dependency wördt internationaal neet erkend.
 
 {| class="wikitable" style="width: 100%;"
 !width=25%|Korte landsname (neadersassisk)
