*Empty MediaWiki Message*

--- a/Kenia.mw
+++ b/Kenia.mw
@@ -204,7 +204,7 @@ Nå anname van de nye grundwet wör Kenia ne presidentiele representative demokr
 
 In 2011 stüürden Kenia trupen når Somalie üm te vechten teagen [[islam]]itiske terröörgruup [[Al-Shabaab]]. 
 
-[[File:Secretary Kerry Jokes About His Height Standing With Kenyan President Uhuru Kenyatta at the State House in Nairobi (28534132883).jpg|thumb|Keniaanske president [[Uhuru Kenyatta]] med den amerikaansken ståtssekretåris [[John Kerry]] up [[22 augustus]] 2016]]
+[[File:Secretary Kerry Jokes About HIs Height Standing With Kenyan President Uhuru Kenyatta at the State House in Nairobi (28534132883).jpg|thumb|Keniaanske president [[Uhuru Kenyatta]] med den amerikaansken ståtssekretåris [[John Kerry]] up [[22 augustus]] 2016]]
 Do as halverweage [[2011]] vöär et tweyde jår te weinig reygen völ, kreag Kenia te maken med de slimste dröygte en dårupvolgenden hunger in 60 jår. Vöäral de noordwestelike [[gråfskap Turkana]] wör slim tröffen.<ref>[http://www.kbc.co.ke/news.asp?nid=71528 |archiveurl=https://web.archive.org/web/20120104173650/http://www.kbc.co.ke/news.asp?nid=71528  Kbc.co.ke. (Archiveerd). "Red Cross Warns of Catastrophy in Turkana". Koech, Dennis. Skreaven up 4 januåry 2012.] Bekeaken up 7 August 2011.</ref> Lokale skolen wördden der selvs ümme slöäten.<ref>[http://www.indcatholicnews.com/news.php?viewStory=18686 Indcatholicnews.com. "Kenya: schools close as famine takes hold in Turkana." Skreaven up 28 july 2011.] Bekeaken up 7 augustus 2011.</ref> Begin 2012 wör den krisis oaverwünnen döär erichte noudhülpe. hülpbedryve deaden öäre hülpe verleggen når weaderupbow, döär under meyr irrigatykanalen te graeven en söäde uut te deylen.<ref>[https://www.nytimes.com/2012/02/04/world/africa/un-says-famine-in-somalia-is-over-but-risks-remain.html  Gettleman, Jeffrey (3 februåry 2012) "U.N. Says Famine in Somalia Is Over, but Risks Remain]. ''The New York Times''.</ref>
 
 In 2013 had Kenia syn eyrste algemeyne verkesingen nå den nyen grundwet. Uhuru Kenyatta wün in een slim betwiste uutslag, wårup den teagenstander, Raila Odinga, ne petity uutskreav. Den keniaansken Hougen Råd höld  vaste an de oorsprunglike verkesingsuutslage en Kenyatta wör president, med [[William Ruto]] as underpresident. 
