*Empty MediaWiki Message*

--- a/Kenia.mw
+++ b/Kenia.mw
@@ -260,6 +260,25 @@ Et 'lange reygen'-seisoon duurt van maert/april töt mei/juni. Et 'körte reygen
 ===Deers===
 Een flink deyl van Kenia is vöärbestemd vöär wilde deers, med inbegrip van de [[Masai Mara]]. Dår vindet alle jåren tüsken juni en september den [[Grouten Trek]] plaats, wårby as oaver de 1 miljoon [[gnu]]s en 200.000 [[zebra]]'s de [[Mara (rivyr)|Mararivyr]] oaversteaket.<ref>[http://nationalgeographic.org/media/wildebeest-migration/ National Geographic.com. "Wildebeest Migration". Skreaven up 19 januåri 2012.] Bekeaken up 13 mei 2016.</ref> In ne vöärtgånde beweyging med de klokke med loupet de deers 2900 km van de eyne voder- en watersteyde når den volgenden, tüsken de [[Serengeti]] in [[Tanzania]] en de Masai Mara in Kenia. Dit spektakel leyvert vöäre inkomsten uut et [[tourisme]] up.
 
+==Ekonomy== 
+[[File:Kenya Export Treemap.jpg|thumb|upright=1.6|Ne verholdingskaarte van Kenia's uutvoor.]]
+
+Kenia's algemeyne ekonomy is de lätste teentallen jåren flink egrööid, vöärnamelik döär groute weagenbowprojekten. Vöäle van disse grööi kümt van geld wat eygenlik bestemd was vöär gewone kenianen. Mär döär erichte fiskale en monetäre måtregelen en misbestüür, [[umkoperieje|ümköyperye]], wegslusen van publike fundsen en een slecht warkend rechterlik apparaat, belandt der weinig van de geldelike stüt by de gewone lüde en lokale underneamers in de knippe. In [[2014]] wör et land upny skatted en versköäv et Bruto Inlandsk Produkt når de ståtus van laege-töt-döärsneyde inkoamens.
+
+Kenia hevt ne Menskelike Untwikkelings Index (MUI) van 0,555 en steyt dårmed up de 145. van de 186 in de wearld. In [[2005]] must 17,7% van kenianen sik redden med €1,12 up nen dag. In [[2017]] stünd Kenia 92. in de handelsgemaksindex van de wearldbanke, teagenoaver 113. in 2016 (up 190 landen).<ref>[http://www.doingbusiness.org/data/exploreeconomies/kenya doingbusiness.org. "Doing Business in Kenya – World Bank Group".] Bekeaken up 14 januåry 2017.</ref> De belangrykste, mär ouk slim underuntwikkelde en inefficiente handelstak is de landbow. Hyrin warket 75% van de lüde, teagenoaver 3% in [[untwikkelde landen]]. Kenia wördt vake anedüdet as ne ''grensmarkt'' of mangs [[upkoamende markt]], mär höyrt nit by de slechtst untwikkelde landen.
+
+De ekonomy is flink uutebreidet, vöäral döär tooneamend tourisme, höyger underwys en [[telekommunikaty]], as ouk gode landbowresultåten nå de dröygte. Dat lätste med name in de vöärname [[tea]]-industry. In [[2007]] grööiden Kenia's ekonomy med meyr as 7% en losden et land vöäle skulden af. Nå de anevöchtene presidentsverkesingen van december 2007 slöäg dit dramatisk ümme en vervöl et land in chaos.
+
+Telekommunikaty en financieel wark ümvattet nu 62% van et BIP. 22% van et BIP kümt noch altyd uut de unstabile landbow, wårin as noch 75% van et warkvolk warket (een kenteaken van underuntwikkelde ekonomyen wår as noch gin [[voodselseakerheid]] is - een belangryke grund vöär ekonomisken grööi). Een klein deyl van de bevolking müt et hebben van voodselhülpe.<ref>[https://www.usaid.gov/kenya/food-assistance usaid.gov. "Food Assistance Fact Sheet – Kenya".] Bekeaken up 13 mei 2016.</ref> Industry en fabrikswark vörmet de kleinste sektor, med 16% van et BIP. In deensten en maakindustry warket mär 25% van et warkvolk, mär se leyvert 75% van et BIP.<ref>[http://lcweb2.loc.gov/frd/cs/profiles/Kenya.pdf Library of Congress: Federal Research Division. "Country Profile: Kenya". Skreaven in juni 2007.]  Bekeaken up 23 april 2011.</ref>
+
+Kenia voort jårliks oaver de €350 miljoon uut an linnengood.
+
+Vöäle vrogere ståtsbedryve, so as de buten bedryv weasende Kenya Post and Telecommunications company, wördden privatiseerd. Dit tröäk nen machtigen houp private investering an, wårdöär as et hüdige [[Safaricom]] rechtevoort eyne van de suksesvulste bedryve in Oust-Afrika is.
+
+[[File:Kenya, Trends in the Human Development Index 1970-2010.png|thumb|upright=1.6|Kenia's trends in de Menskelike Untwikkelings Index van 1970 töt 2010.]]
+
+In maert [[1996]] vörmden de presidenten van Kenia, Tanzania en Uganda med mekander de [[Oust-Afrikaanske Gemeynskap]] (OAG). De OAG wil tariven en douanehandelingen lyktrekken en samenwarken an vrye döärgang vöär inwoaners en beatere weagen. In maert 2004 teakenden de drey landen een handelsverdrag.
+
 [[Kategorie: Tweants artikel]]
 [[Kategorie: Afrika]]
 
