/* Bekende leu oet Almelo */

--- a/Almelo.mw
+++ b/Almelo.mw
@@ -24,7 +24,7 @@ webstie = [http://www.almelo.nl www.almelo.nl] |
 De gemeente hef ne öppervlakte van 69,40 veerkaante kilometer en op n eerstn jannewoari [[2019]] har de stad 72.883 inwonners. Nöast de stad heurt ook de döarpe [[Aadorp]], [[Boornerbrook]] en n gedeelte van [[Mariaparochie]] biej de gemeente. n Deel van de leu oet Almelo proat [[Tweants]], n dialekt van t [[Neersassies]].
 
 ==Bekende leu oet Almelo==
-*[[Wubbo Ockels]] - Ruumteveurder (maakn in 1985 as eerstn Nederlaander 'n vlucht deur de ruumte hen)
+*[[Wubbo Ockels]] - Ruumtevaarder (maakn in 1985 as eerstn Nederlaander 'n vlucht deur de ruumte hen)
 *[[Ilse deLange]] - zangeres
 *[[Herman Finkers]] - grapnmaker
 *[[Wout Brama]] - vootballer
