--- a/Nedersaksisch_T.mw
+++ b/Nedersaksisch_T.mw
@@ -85,6 +85,10 @@ Hier stoat woorden die of in 't '''Nedersaksisch mit T begunt''' oet 't [[Neders
 **''weerom'' (körte tied; bv. hai was nog môr net vot of hai kwam ook al weerom)
 **''der weer'' (bv. mien zeun is er der weer van vakantie)
 **''retoer'' (ien zulfde stoat as dat er hìn goan is; bv. wie hebben dat pakketje retoer stuurd)
+*[[Sallaans]]:
+**''terugge'', ''trugge''
+**(niet veul veurkommnd:) ''terogge''
+**''weerumme'', ''wearumme''
 *[[Tweants]]:
 **''wierumme''
 **''dr wier'' (vgl Grönnings: ''hee is dr wier van vakaansie'')
