--- a/Nedersaksisch_T.mw
+++ b/Nedersaksisch_T.mw
@@ -142,7 +142,10 @@ Hier stoat woorden die of in 't '''Nedersaksisch mit T begunt''' oet 't [[Neders
 **''zetje''
 **''steutje''
 **''toertje''
-*[[Sallaans]]: ...
+*[[Sallaans]]: 
+**''tiedtie(n)''
+**''('n) zet''; ''zettie(n)''
+**''poze''; ''posie(n)''
 *[[Stellingwarfs]]: 
 **''hottien''
 **''poze'', ''posien'', ''possien''
