--- a/Nedersaksisch_T.mw
+++ b/Nedersaksisch_T.mw
@@ -195,14 +195,17 @@ Hier stoat woorden die of in 't '''Nedersaksisch mit T begunt''' oet 't [[Neders
 ** ''teppen''
 ** ''roppen'' (hard trekken)
 *** ''verropt'' = verminkt: ''Wilm II van Praissen haar n verropte aarm.''
-*[[Sallaans]]: ...
+*[[Sallaans]]: 
+**''trekken''
+**''roppen''
+**''sjorren''
 *[[Stellingwarfs]]: ...
 *[[Tweants]]: 
-**''trekn''
-**''slepn''
-**''ropn''
-**''sjorn''
-**''torn''
+**''trekken''
+**''sleppen''
+**''roppen''
+**''sjorren''
+**''torren''
 *[[Urkers]]: ...
 *[[Veluws]]: ''trekken''
 
