--- a/Nedersaksisch_T.mw
+++ b/Nedersaksisch_T.mw
@@ -214,7 +214,8 @@ Hier stoat woorden die of in 't '''Nedersaksisch mit T begunt''' oet 't [[Neders
 
 ==Tjongejonge==
 *[[Nederlands]]: ''Tjongejonge!''
-
+*[[Sallaans]]:
+**''goddegod'', ''guttegut''
 *[[Grönnegs]]: 
 **''God-toe-God!'', ''God-doe-God!''
 **''Man, man, man'' (veuraal bekend worden deur Ede Staal zien oetsproak: "Man, man, man, wat n boudel!")
