*Empty MediaWiki Message*

--- a/Stadsplat.mw
+++ b/Stadsplat.mw
@@ -1,27 +1,32 @@
-t '''Stadsplat''' of '''stadplat''' is n verzammeling [[dialekt]]n wat wörd sprökn in de gröttere steadn in t [[Nedersaksisch|Neersassies]] gebeed. t Is n vörm van t [[Neerlaands]], met Neersassiese kenmearken, zo as oetsproake en n paar dialektwöarde en [[Tweantse zegswiezen|zegswiezen]] dr deur. Veural in de gröttere [[Tweante|Tweantse]] steadn [[Almelo]], [[Hengel (Oaveriessel)|Hengel]] en [[Eanske]] wörd dit dialekt sprökn. Vake sprekt of begriept sprekkers van t stadplat t echte dialekt oet de umgeaving nich mear.
+'''Stadsplat''' of '''stadplat''' is een versammeling [[dialekt]]en wat wördt spröäken in de gröttere steyden in et [[Nedersaksisch|Neadersassiske]] gebeed. Et is een vörm van et [[Neerlaands|neaderlandsk]], med neadersassiske kenmarken, zo as uutspråke en een paar dialektwöörde en [[Tweantse zegswiezen|segswysen]] der döär. Vöäral in de gröttere [[Tweante|twentske]] steyden [[Almelo]], [[Hengel (Oaveriessel)|Hengel]] en [[Eanske|Enskede]] wördt dit dialekt spröäken. Echt neadersassisk spreaket of begrypet sprekkers van et stadplat nich meyr.
 
-==Kenmearken==
-===Oetsproake===
-Neersassiese kleenkers en metkleenkers wordt toopast in t Neerlaands. t Bekeandst bint de -ee en de -oo en de -eu, dee nich vergliedt (nen [[tweeklaank]] wordt), mer ne [[eankelklaank]] blieft. Ook de -ui en -ei bint aans as in t [[Standaard Nederlaands]]; ze begint heuger en mear veurin in de moond. De -au kleenkt mear as ne -oo dan as ne -aaw.
+Et verskynsel is te vergelyken med et [[leeuwardersk]] stads[[freesk]], wat eygenlik hollandsk is med starke freeske kenmarken, en et [[Missingsch]] in Noord-Düütskland.
 
-Elk woard wat in t Hollaands op -en eandigt, wörd in t stadsplat oetsprökn met nen lettergreepkleenker, den't ekeuzn wörd ofhaankelik van de plek van oetsproake van de veurgoande metkleenker; de wearkwöarde ''lopen'', ''eten'' en ''werken'' wordt dus oetsprökn as ''loop-m'', ''eet-n'' en ''werk-ng''. Wat leu probeert dit teegn te goan, en probeert de leste lettergreep volledig oet te sprekn, woardeur t wier tevölle noadruk krig: ''loopuhn'', ''eetuhn'' en ''werkuhn''. Groepen metkleenkers wordt teruggebracht (kleenkerreduksie): bv. ''borst'' wörd oetsprökn as ''bos'', en ''tegen'' wörd ''teeng''.
+==Kenmarken==
+===Uutsproake===
+Neadersassiske klinkers en medklinkers wordet topassed in et neaderlandsk. Et bekendst bint de vlakke ''ee'', ''oo'' en ''eu'', dee as nich verglydet (nen [[tweeklaank|tweyklank]] wordet). Ouk de ''ui'' en ''ei'' bint anders as in et Standaard Nederlands: se beginnet höyger en meyr vöärin den mund (''buiten'' wördt ''büj(t)-n'', ''weinig'' wördt ''weejnig''). De ''ou'' klinkt meyr as ne ''oo'' as as ne ''aau''.
 
-Wieders is t stadsplat [[rhotisisme|non-rhoties]], wat beteeknt det ne -r an t eande van n woard of noa n kleenker nich wörd oetsprökn; ''moeder'' wörd oetsprökn as ''moede''.
+Elk woord wat in et hollandsk up -en endigt, krigt in et stadsplat ne [[lettergreapklinker]]: ''-m'', ''-n'' of ''-ng''. Den wördt köäsen up basis van de vöärgånde medklinker: de warkwöörde ''lopen'', ''eten'' en ''werken'' wordet uutspröäken as ''loo(p)-m'', ''ee(t)-n'' en ''wer(k)-ng''. Ümdat dit as sociaal unwünskelik seen wördt, proberet lüde dit in sociaal underskeidende ümstandigheden te underdrükken en de lätste lettergreap vulleydig uut te spreaken, wårdöär et jüüst tevöäle nådruk krigt: ''loopühn'', ''eetühn'' en ''werkühn''. Medklinkergrupen wordet terüggebracht (medklinkerredukty): ''borst'' wördt ''bos''.
 
-Ook wörd dr völ [[ofzwakking (sproaklear)|ofzwakking]] of ''lenisie'' toopast. Hierbie wordt harte stemloze plofklaankn (''p'', ''t'' en ''k'') ofzwakt töt ne zachte stemhebnde plofklaank (''b'', ''d'' en [[Duuts]]en ''g'') as ze tusken twee kleenkers in stoat. t Zinneke "Dat kun je maar beter niet opeten" wörd oetsprökn as "da kuj ma bede nie obbeetn".
+Stemhebbende wryf- en sis-klanken wordet untstemd: [z] wördt håste altyd [s], [v] wördt [f].
 
-Hieroet blik ook dat stadsplat de saamntrekkings oet t Neersassies gebrok: ''wil ik'', ''kun je'', ''zullen we'' , ezw, wordt saamntrökn as ''wi'k'', ''ku'j'' en ''zu'w''.
+Wydters is et stadsplat [[rhotisisme|nit-rhotisk]], wat wil seggen dat de -r an et ende van een woord of lettergreap of nå nen klinker nich uutsprökken wördt: ''Moeder'' wördt ''moede'', de jungensnaam ''Bart'' wördt ''Bat''.
 
-===Wöarde en zegswiezen===
-De basis van de stadsplatte wöardeskat is t Hollaands, mer hierdeurhen wordt völ dialektwöarde doan. Bekeande veurbeelde zeent ''onmeundig'' en ''kats'', dee sprekkers broekt zoonder noadeanken:
-*"Het ging onmeundig hard" - "het ging ontzettend snel."
-*"Ik heb dr kats niet meer aan gedacht" - "ik ben het compleet vergeten".
+Ook wördt der völle [[ofzwakking (sproaklear)|afswakking]] (''lenity'') topassed. Hyrby wordet harte stemlouse plufklanken ''p'', ''t'' en ''k'' afwakked töt sachten ''b'', ''d'' en [[Duuts]]en ''g'' as se tüsken twey klinkers inståt. Et vöärbealdsinneke "Dat kun je maar beter niet opeten" wördt uutspröäken as "da kuj ma bede nie obeedn".
 
-Völ heurde zegswiezen bint: "ik heb de band lek"(i.p.v. ''Mijn band is lek'') en "De ruiten los" (i.p.v. ''de ramen open'').
+Hyruut blikt ouk dat stadsplat de samentrekkingen uut et neadersassisk gebrukt:''wil ik'', ''kün y'', ''sölt wy'' , esw, wordet samentrökken as ''wi'k'', ''ku'j'' en ''zu'w''.
 
-==Bekeande sprekkers==
-*[[Ilse DeLange]] - Zängeresse oet Almelo
-*[[Herman Finkers]] - komiek en leedjesskriever oet Almelo
+===Wöörde en segswysen===
+In de basis is de wöördeskat van et stadsplat hollandsk. Toch wordet hyr vöäle dialektwöörde döärhen bruked. De bekendste vöärbealde sint ''unmündig'' en ''kats''.
+
+*"Et ging omunnig hat" - "het ging ontzettend snel."
+*"Ik heb der kats nie meer aan (ge)dacht" - "ik ben het compleet vergeten".
+
+Andere segswysen hebbet ne typisk twentske undergrund: "ik heb de band lek"(i.s.v. ''Mijn band is lek'') en "De ruiten los" (i.p.v. ''de ramen open'').
+
+==Bekende sprekkers==
+*[[Ilse DeLange]] - Sängeresse uut Almelo
+*[[Herman Finkers]] - Komyk en leedkesskryver uut Almelo
 
 [[Kategorie:Tweants artikel]]
 [[Kategorie:Nederlaands]]
