--- a/Stadsplat.mw
+++ b/Stadsplat.mw
@@ -8,7 +8,7 @@ Neadersassiske klinkers en medklinkers wordet topassed in et neaderlandsk. Et be
 
 Elk woord wat in et hollandsk up -en endigt, krigt in et stadsplat ne [[lettergreapklinker]]: ''-m'', ''-n'' of ''-ng''. Den wördt köäsen up basis van de vöärgånde medklinker: de warkwöörde ''lopen'', ''eten'' en ''werken'' wordet uutspröäken as ''loo(p)-m'', ''ee(t)-n'' en ''wer(k)-ng''. Ümdat dit as sociaal unwünskelik seen wördt, proberet lüde dit in sociaal underskeidende ümstandigheden te underdrükken en de lätste lettergreap vulleydig uut te spreaken, wårdöär et jüüst tevöäle nådruk krigt: ''loopühn'', ''eetühn'' en ''werkühn''. Medklinkergrupen wordet terüggebracht (medklinkerredukty): ''borst'' wördt ''bos''.
 
-Stemhebbende wryf- en sis-klanken wordet untstemd: [z] wördt håste altyd [s], [v] wördt [f].
+Stemhebbende wryv- en sis-klanken wordet untstemd: [z] wördt håste altyd [s], [v] wördt [f].
 
 Wydters is et stadsplat [[rhotisisme|nit-rhotisk]], wat wil seggen dat de -r an et ende van een woord of lettergreap of nå nen klinker nich uutsprökken wördt: ''Moeder'' wördt ''moede'', de jungensnaam ''Bart'' wördt ''Bat''.
 
